xfsprogs-2.8.x
	- Fix v2 directory checking with holes and unreadable blocks.
	- Fix a memory leak in dir2 checking.
	
xfsprogs-2.8.12 (29 August 2006)
	- Multi-thread modifications to xfs_repair.
	- Updated Polish translation, thanks to Jakub Bogusz.
	- Change default mkfs realtime extent size setting to
	  perform better for buffered writes.

xfsprogs-2.8.11 (08 August 2006)
	- xfs_repair prefetch optimisations.
	- Make many tools use direct I/O on Linux if the underlying
	  device supports it.  Mainly for speeding up xfs_repair as
	  libxfs does its own internal metadata buffering now.
	- Fix warnings from mkfs.xfs on ramdisk devices.
	- Fix issues with symbolic link handling in Makefiles.

xfsprogs-2.8.10 (02 August 2006)
	- Fix v2 directory rebuilds in phase6 of xfs_repair.
	- Fix buffer sizing issue for large pagesize systems,
	  affecting mkfs auto-device-type-detection heuristics.

xfsprogs-2.8.9 (18 July 2006)
	- Fix rpm issue with install targets as uid/gid zero (we now
	  using symbolic names rather than the numeric versions).

xfsprogs-2.8.8 (14 July 2006)
	- Fix issues with makedepend on libtool libraries.

xfsprogs-2.8.7 (10 July 2006)
	- Fix build of xfs_logprint for different uuid_t definitions;
	  thanks to Craig Rodrigues.

xfsprogs-2.8.6 (07 July 2006)
	- Fixed xfs_repair handling of duplicate names in a directory.

xfsprogs-2.8.5 (05 July 2006)
	- Update translation Makefile to work better with the Ubuntu
	  translation system.  Thanks to feedback from Martin Pitt.
	- Fix annoying "ignores datarootdir" warning from configure.
	- Fix issues with makedepend build infrastructure.
	- Add prefetch code for improved xfs_repair run times.

xfsprogs-2.8.4 (23 June 2006)
	- Improve Debian udeb package handling, thanks to Frans Pop.
	- Fix a situation where xfs_growfs can fail to match a block
	  device to a filesystem correctly; thanks to Bastian Kleineidam.
	- Minor corrections to the xfs_growfs man page.

xfsprogs-2.8.3 (21 June 2006)