@@ -57,6 +57,7 @@ AC_HAVE_GETMNTINFO
 
 AC_TYPE_PSINT
 AC_TYPE_PSUNSIGNED
+AC_CHECK_TYPES(__u32,,,[#include <asm/types.h>])
 AC_SIZEOF_POINTERS_AND_LONG
 AC_MANUAL_FORMAT
 
