@@ -31,6 +31,10 @@
 #include <unistd.h>
 #include <sys/types.h>
 
+#undef HAVE___U32
+#ifdef HAVE___U32
+#include <asm/types.h>
+#else
 typedef unsigned char		__u8;
 typedef signed char		__s8;
 typedef unsigned short		__u16;
@@ -39,6 +43,7 @@ typedef unsigned int		__u32;
 typedef signed int		__s32;
 typedef unsigned long long int	__u64;
 typedef signed long long int	__s64;
+#endif
 
 typedef __u16			__be16;
 typedef __u32			__be32;
